--- a/PORTFOILO/index.html
+++ b/PORTFOILO/index.html
@@ -72,6 +72,7 @@ emailjs.init("");
                 products. Always looking
                 forward to learning something
                 new to strengthen skills learned.
+            
                 </div>
                 <div class="home__icon_cont">
                   <a href="https://github.com/priyankaphulmante98" target="_blank"><div class="icon"><i class="fab fa-github"></i></div></a>
@@ -156,9 +157,9 @@ emailjs.init("");
                   </div>
                 </div>
                 <!-- -----------------------------experience-------------------------- -->
-                <div class="section-title padd-15 margtop">
-                  <h2>Experience</h2>
-                </div>
+                <!-- <div class="section-title padd-15 margtop">
+                <h2>Experience</h2>
+                </div> -->
                 <div class="EDUCATION">
                   <div>
                    
