--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ emailjs.init("");
                 <!-- ------------------------------- -->
                 <!-- services section start -->
                 <div class="section-title padd-15 margtop">
-                  <h2>About github info</h2>
+                  <h2>github info</h2>
                 </div>  
                 <div class="EDUCATION">
                   <img class="gcal"
