--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@ emailjs.init("");
                 </div>
                 <div class="home__icon_cont">
                   <a href="https://github.com/priyankaphulmante98" target="_blank"><div class="icon"><i class="fab fa-github"></i></div></a>
-                  <a href="https://www.linkedin.com/in/priyanka-phulmante-181633191/" target="_blank"><div class="icon"><i class="fab fa-linkedin"></i></div></a>
+                  <a href="https://www.linkedin.com/in/priyanka-phulmante-181633191" target="_blank"><div class="icon"><i class="fab fa-linkedin"></i></div></a>
                   <a href="https://twitter.com/priyankaphulma1" target="_blank"><div class="icon"><i class="fab fa-twitter"></i></div></a>
                 
                 </div>
               <a href="https://drive.google.com/file/d/1Zbm2brreRGIcMkK2IWoJS7AiBSwJkIyv/view?usp=sharing" target="_blank" class="btn">Resume</a>
             </div>
             <div class="home-img padd-15">
-              <img src="images/hero.png" alt="priya">
+              <img id="priya_img" src="images/hero.png" alt="priya">
             </div>
           </div>
         </div>
