--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
         <div class="text-1">Hello, my name is</div>
         <div class="text-2">priyanka phulmante</div>
         <div class="text-3">And I'm a <span class="typing"></span></div>
-        <a href="./pdf/priyanka_phulmante_pdf.pdf" download target="_blank">Resume</a>
+        <a href="./pdf/priyanka_phulmante_pdf.pdf" download target="_blank">
+          <i class="fa fa-download" aria-hidden="true">&nbsp; CV</i>
+         <!-- <i class="ri-inbox-archive-fill">CV</i> -->
+  
+         
       </div>
     </div>
   </section>
