--- a/index.html
+++ b/index.html
@@ -89,12 +89,13 @@
             I'm priyanka phulmante and I'm a <span class="typing-2"></span>
           </div>
           <p>
-            Aspiring Full-Stack Web Developer with a specialization in MERN
+            A Skilled full stack developer with a specialization in MERN
             stack and have worked through 2000+ hrs in learning and building
             projects using a variety of powerful skills. Also Completed 100+
-            hrs of Soft Skill Training. Self-motivated and curious, with a
-            keen interest towards building user-centric products. Looking
-            forward to honest my skills in a challenging work environment
+            hrs of Soft Skill Training. quick learner who can quickly adapt 
+            to new environments. Looking for a challenging role in the industry 
+            to utilize skills and learn.
+            
           </p>
           <!-- <a href="#">Download CV</a> -->
         </div>
@@ -370,7 +371,7 @@
   </section>
   <!-- footer section start -->
   <footer>
-    <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+    <span class="far fa-copyright"></span> 2022 💖 All rights reserved.</span>
   </footer>
 
 
