--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="text-1">Hello, my name is</div>
         <div class="text-2">Priyanka Phulmante</div>
         <div class="text-3">And I'm a <span class="typing"></span></div>
-        <a href="./pdf/priyanka_phulmante_pdf.pdf" download target="_blank">
+        <a href="./pdf/Priyanka_Phulmante_pdf.pdf" download target="_blank">
           Resume &nbsp;<i class="fa fa-download" aria-hidden="true"></i></a>
           <!-- Resume &nbsp;<i class="fa fa-download" aria-hidden="true"></i> -->
       </div>
@@ -252,7 +252,7 @@
                 <p><span>TechStack:</span> &nbsp;React.js &nbsp; redux-thunk &nbsp;Chakra-UI &nbsp; MongoDB  &nbsp; Node.js &nbsp; Express.js &nbsp; CSS &nbsp; firebase</p>
               </div>
                 <span class="pbtn">
-              <a href="skill-up-habitual-oatmeal.netlify.app/" target="_blank">Live </a> </span>
+              <a href="https://skill-up-habitual-oatmeal.netlify.app/" target="_blank">Live </a> </span>
               <span class="pbtn">
               <a href="https://github.com/gucci1909/habitual-oatmeal-3228" target="_blank">GitHub</a> </span>
           
@@ -410,14 +410,14 @@
               </div>
             </div>
 
-            <div class="row">
+            <!-- <div class="row">
               <a class="a" href="https://twitter.com/priyankaphulma1" target="_blank"><i class='fab fa-twitter'></i> </a>
               <div class="info">
-                <!-- <div class="head">Email</div> -->
+               
                 <div class="sub-title"> <a class="a" href="https://twitter.com/priyankaphulma1" target="_blank">Twitter</a>
                 </div>
               </div>
-            </div>
+            </div> -->
 
             <div class="row">
               <i class="fas fa-phone-alt"></i>
