--- a/index.html
+++ b/index.html
@@ -410,14 +410,14 @@
               </div>
             </div>
 
-            <!-- <div class="row">
+            <div class="row">
               <a class="a" href="https://twitter.com/priyankaphulma1" target="_blank"><i class='fab fa-twitter'></i> </a>
               <div class="info">
                
                 <div class="sub-title"> <a class="a" href="https://twitter.com/priyankaphulma1" target="_blank">Twitter</a>
                 </div>
               </div>
-            </div> -->
+            </div>
 
             <div class="row">
               <i class="fas fa-phone-alt"></i>
