--- a/index.html
+++ b/index.html
@@ -358,17 +358,17 @@
           <div class="box">
             <!-- <i class="fas fa-paint-brush"></i> -->
             <div>
-              <img class="img" src="./images/kindmeal.png" alt="kindmeal">
+              <img class="img" src="./images/vaccine.png" alt="vaccine">
             </div>
-            <div class="text">KindMeal.my Clone</div>
-            <p id="text">KindMeal.my is Malaysia's leading meat-free lifestyle platform, indulging you with delicious discounted vegetarian meals to save animals, environment and money.</p>
+            <div class="text">Covid Vaccination System</div>
+            <p id="text">Register or Sign In for Vaccination. An generate the random number OTP will be sent to your mobile number for verification. GET OTP.</p>
               <div class="tech">
                 <p><span>TechStack:</span> &nbsp;JavaScript &nbsp; HTML &nbsp; CSS</p>
               </div>
             <span class="pbtn">
-              <a href="https://fantastic-horse-7681f8.netlify.app" target="_blank">Live </a>  </span>
+              <a href="https://corona-vaccine.vercel.app/" target="_blank">Live </a>  </span>
               <span class="pbtn">
-              <a href="https://github.com/raushanraj901/Unit_3_Project_kindmeal" target="_blank">GitHub</a>
+              <a href="https://github.com/priyankaphulmante98/Covid-Vaccination-System" target="_blank">GitHub</a>
             </span>
 
           </div>
