--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
      
 
         <div class="column left">
-          <img class="profile_img" src="./images/priya.png" alt="priya" />
+          <img class="profile_img" src="./images/priya.jpg" alt="priya" />
         </div>
 
         <div class="right" id="column_Right">
