updated summry part

--- a/index.html
+++ b/index.html
@@ -97,12 +97,17 @@
             I'm Priyanka Phulmante and I'm a <span class="typing-2"></span>
           </div>
           <p>
-            A Skilled full stack developer with a specialization in MERN
+            <!-- A Skilled full stack developer with a specialization in MERN
             stack and have worked through 2000+ hrs in learning and building
             projects using a variety of powerful skills. Also Completed 100+
             hrs of Soft Skill Training. quick learner who can quickly adapt 
             to new environments. Looking for a challenging role in the industry 
-            to utilize skills and learn.
+            to utilize skills and learn. -->
+              I have 1.5 years of experience in designing and implementing web applications using various technologies such as HTML, CSS, JavaScript, React.js, Angular, Node.js, Express.js and MongoDB. I have a strong understanding of web development principles and have worked on several projects that involve both front-end and back-end development.
+
+              In my current role as Engineer Intern at Fundflo, I have successfully developed and deployed web applications that have improved user experience and increased website traffic. I have collaborated with cross-functional teams to ensure that projects are delivered on time and within budget. Additionally, I am constantly updating my skills and knowledge by attending industry events and workshops.
+
+              I am passionate about developing innovative and intuitive web applications that meet the needs of end-users. If you are looking for a full-stack web developer who is committed to delivering high-quality solutions, please don't hesitate to contact me.
             
           </p>
         
